<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/item_kanji"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/exp_item_kanji"/>
    <TextView
        android:id="@+id/item_romaji"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/exp_item_romaji"/>
    <TextView
        android:id="@+id/item_meaning"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/exp_item_meaning"/>
</LinearLayout>